--- a/style.css
+++ b/style.css
@@ -55,12 +55,7 @@ ul {
     outline:none;
     
 }
-/* li, h3 {
-    list-style:none;
-} */
-/* input,button{
-    outline:none;
-} */
+
 .todo-adding__task-input{
     outline: none;
     border: 1px solid #dDd;
@@ -96,22 +91,8 @@ ul {
     color: #3a3A3a;
 }
 
-
-
-
-
-
 /* Heading */
-/*  h3,
-label[for='new-task'] {
-    color: #333;
-    font-weight: 700;
-    font-size: 15px;
-    border-bottom: 2px solid #333;
-    padding: 30px 0 10px;
-    margin: 0;
-    text-transform: uppercase;
-}  */
+
 .todo-pending__title {
     color: #333;
     font-weight: 700;
@@ -132,21 +113,6 @@ label[for='new-task'] {
     text-transform: uppercase;
 } 
 
-/* input[type="text"] {
-    margin: 0;
-    font-size: 18px;
-    line-height: 18px;
-    height: 21px;
-    padding: 0 9px;
-    border: 1px solid #dDd;
-    background: #FFF;
-    border-radius: 6px;
-    font-family: "Lato", sans-serif;
-    color: #888;
-}
-input[type="text"]:focus {
-    color: #333;
-}  */
  .todo-pending__task[type="text"]{
     margin: 0;
     font-size: 18px;
@@ -164,35 +130,8 @@ input[type="text"]:focus {
     color: #333;
 } 
 
-
-
-
-
-/* New Task */
-/* label[for='new-task'] {
-    display: block;
-    margin: 0 0 20px;
-}
-input#new-task {
-    width: 318px;
-} */
-
-/* .todo-adding__task-input[for='new-task']{
-    display: block;
-    margin: 0 0 20px;
-}
-
-input#new-task {
-    width: 318px;
-} */
-
-
-
-
-
-
 /* Task list */
-/* li {
+li {
     overflow: hidden;
     padding: 20px 0;
     border-bottom: 1px solid #eee;
@@ -200,7 +139,18 @@ input#new-task {
     display: flex;
     justify-content: space-between;
     align-items: center;
-} */
+} 
+
+li> button {
+    background: none;
+    border: 0px;
+    color: #888;
+    font-size: 15px;
+    width: 60px;
+    font-family: "Lato", sans-serif;
+    cursor: pointer;
+}
+
 .todo-pending__list,
 .completed__list {
     overflow: hidden;
@@ -211,9 +161,7 @@ input#new-task {
     justify-content: space-between;
     align-items: center;
 }
-/* li > * {
-    vertical-align: middle;
-} */
+
 .todo-pending__list > *{
     vertical-align: middle;
 }
@@ -230,15 +178,10 @@ input#new-task {
 .todo-pending__task[type="text"] {
     width: 226px
 }
-/* button.delete img {
-    height: 2em;
-    transform: rotateZ(45deg);
-    transition: transform 200ms ease-in;
-} */
 
 .completed__button-delete{
     background: none;
-    border: 0px;
+    border: 0;
     color: #888;
     font-size: 15px;
     width: 60px;
@@ -247,7 +190,7 @@ input#new-task {
 }
 
 
-.todo-pending__button-delete img{
+.todo-pending__button-delete img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
@@ -256,7 +199,7 @@ input#new-task {
 .todo-pending__button-delete img:hover {
     transform: rotateZ(0);
 }
-.completed__button-delete {
+.completed__button-delete img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
@@ -265,39 +208,20 @@ input#new-task {
     transform: rotateZ(0);
 }
 
-
-/* Completed */
-/* ul#completed-tasks label {
-    text-decoration: line-through;
-    color: #888;
-} */
 .completed__name {
     text-decoration: line-through;
     color: #888;
 }
 
-
-
-
-/* Edit Task */
-/* ul li input[type=text] {
-    display:none
-} */
 .completed__input {
     display:none
 }
 
-/* ul li.editMode input[type=text] {
-    display:inline-block;
-    width:224px
-} */
 .todo-pending__task {
     display:inline-block;
     width:224px
 }
-/* ul li.editMode label {
-    display:none;
-} */
+
 .todo-pending__name {
     display:none;
 }
